--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 import '../styles/global.css';
 const pageTitle = 'About me';
 
@@ -45,9 +47,8 @@ const textCase = 'uppercase';
     </style>
 	</head>
 	<body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    
+		<Header />
 		<h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
 
@@ -74,5 +75,6 @@ const textCase = 'uppercase';
 		{student && <p>I am still in school.</p>}
 		<p>I have {quantity + 8} pairs of {footwear}</p>
 		{operatingSystem === "MacOS" ? <p>I am using a Mac.</p> : <p>I am not using a Mac.</p>}
+		<Footer />
 	</body>
 </html>
