--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = 'Home Page';
+import BaseLayout from '../layouts/BaseLayout.astro';
+import Greeting from '../components/Greetings.jsx';
+const pageTitle = "Home Page";
 ---
-
 <BaseLayout pageTitle={pageTitle}>
-	<h2>My awesome blog subtitle</h2>
+  <h2>My awesome blog subtitle</h2>
+  <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
 </BaseLayout>
